# bora_wrapper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run.py  run_job.py  run_job.sh  setup.py  test.py
bora/: __init__.py  busqueda.py  core.py  secciones.py
bora/texts/: download.py
bora/web/: __init__.py  busqueda.py  core.py  secciones.py
bora_wrapper/: __init__.py  busqueda.py  cli.py  core.py  secciones.py
bora_wrapper/texts/: __init__.py  download.py
bora_wrapper/web/: __init__.py  busqueda.py  secciones.py
tests/: conftest.py  test_busqueda.py  test_download.py  test_secciones.py
