[project]
name = "bora"
version = "0.1.0"
description = "Cliente Python para interactuar con el Boletín Oficial de la República Argentina (BORA)."
readme = "README.md"
authors = [
    { name = "Ignacio Ibarra", email = "ignacio_ibarra@hotmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "requests",
    "beautifulsoup4",
    "python-dotenv>=1.2.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
bora-cli = "run:main"  # Esto permite ejecutar 'uv run bora-cli'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bora", "run.py"]
